# graphql-vs-rest

./: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml  readme.md  run-all.sh
common/: Cargo.toml
common/src/model/: account.rs  message.rs  mod.rs
common/src/service/: database.rs
database/: 20221117160000-create-account.sql  20221117161000-create-message.sql  Dockerfile
graphql-api/: Cargo.toml  Dockerfile  scenario.js
graphql-api/src/: main.rs
graphql-api/src/schema/: account.rs  health.rs  message.rs  mod.rs
rest-api/: Cargo.toml  Dockerfile  scenario.js
rest-api/src/: error.rs  main.rs
rest-api/src/handler/: create_account.rs  create_message.rs  list_message.rs  mod.rs  schema.rs  status.rs
results/: graphql-001.txt  graphql-002.txt  graphql-003.txt  graphql-004.txt  graphql-005.txt  graphql-006.txt  graphql-007.txt  graphql-008.txt  graphql-009.txt  readme.md  rest-001.txt  rest-002.txt  rest-003.txt  rest-004.txt  rest-005.txt  rest-006.txt  rest-007.txt  rest-008.txt  rest-009.txt  summary.csv
