[package]
name = "graphql-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "4.0" }
async-graphql-axum = { version = "4.0" }
tokio = { version = "1", features = ["full"] }
hyper = "0.14"
axum = { version = "0.5.1", features = ["headers"] }
