[package]
name = "graphql-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "4.0" }
async-graphql-axum = { version = "4.0" }
axum = { version = "0.5.1", features = ["headers"] }
hyper = "0.14"
tokio = { version = "1", features = ["full"] }
validator = { version = "0.16", features = ["derive"] }

common = { path = "../common", features = ["graphql"] }
